# einki

./: .env.dev  .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/anki-headless/: Dockerfile  README.md  manual_build.sh  startup.sh
docker/certbot/: Dockerfile  README.md
docker/certbot/hooks/: auth-hook.sh  cleanup-hook.sh
docker/einki/: Dockerfile
docker/nginx/: README.md  default.conf
scripts/: copy_to_remote.sh  debug_anki.sh  install_docker_ubuntu.sh  run_checks.sh  seed_cards.py  setup_https.sh
src/einki/: __init__.py  _anki_client.py  _app.py  _cli.py  _sync.py
src/einki/templates/: decks.html  login.html  study.html
tests/: test_app.py  test_prefs_no_credentials.py
